# line-ui

./: Cargo.toml  LICENSE  README.md  justfile
examples/: input.rs  tic_tac_toe.rs
src/: element.rs  lib.rs  render.rs  style.rs
src/element/: boxed.rs  cursor.rs  fixed_width.rs  gap.rs  impls.rs  into.rs  styled.rs  text.rs
src/style/: color.rs
