[package]
name = "line-ui"
version = "0.2.0"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2024"
description = "Line-based UI with termion"
documentation = "https://docs.rs/line-ui/latest/line_ui/"
readme = "README.md"
repository = "https://github.com/j-tai/line-ui"
license = "MIT"
keywords = ["curses", "tui", "terminal"]
categories = ["command-line-interface"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
termion = "4.0.5"
unicode-width = "0.2.1"

[features]
serde = ["dep:serde"]
